<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestingMode">

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/image_mappedFloorPlan"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="VectorDrawableCompat"
        tools:srcCompat="?android:attr/scrollbarTrackVertical" />

    <TextView
        android:id="@+id/textView_predictedPosition"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_mappedFloorPlan"
        app:layout_constraintVertical_bias="0.028" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_predictedPosition"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_selectMap"
            style="@style/confirmButton"
            android:layout_margin="20dp"
            android:text="@string/select_avail_map" />

        <Button
            android:id="@+id/button_getLocation"
            style="@style/confirmButton"
            android:layout_margin="20dp"
            android:text="@string/where_am_i" />

        <Button
            android:id="@+id/button_back"
            style="@style/confirmButton"
            android:layout_margin="20dp"
            android:text="@string/testing_back" />
    </LinearLayout>

    <!---<Button
        android:id="@+id/button_selectMap"
        style="@style/confirmButton"
        android:layout_margin="20dp"
        android:text="@string/select_avail_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_mappedFloorPlan"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/button_getLocation"
        style="@style/confirmButton"
        android:layout_margin="20dp"
        android:text="@string/where_am_i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_mappedFloorPlan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_selectMap"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_back"
        style="@style/confirmButton"
        android:layout_margin="20dp"
        android:text="BACK"
        app:layout_constraintBottom_toBottomOf="@+id/pinView_testing"
        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>